--- a/index.html
+++ b/index.html
@@ -167,6 +167,19 @@
     							</div>
     					</div>
     				</div>
+					<div class="col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
+						<div class="team-wrapper">
+							<center><img src="images/hexxa.png" class="img-responsive" alt="team img 3"></center>
+							<div class="team-des">
+								<h4>Impresora Acceso</h4>
+								<span>Proyecto Personal</span>
+								<p>Registro de Acceso, mediante el uso de Scaneo QR, realiza peticion a API REST para obtener datos del
+									usuario mediante el QR de la cédula de identidad.</p>
+								<a href="https://github.com/junder79/controlacceso-app" target="_blank"><i style="color:white"
+										class="fab fa-github  fa-lg"></i></a>
+							</div>
+						</div>
+					</div>
     			</div>
     		</div>
     	</section>
